--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,7 +62,7 @@ body {
     line-height: 60px;
     color: #FFF;
     padding: 0 10px;
-    margin-right: 10px;
+    border-right: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .header .signup {
@@ -74,7 +74,8 @@ body {
 }
 
 .header .last {
-    margin-right: -5px;
+    margin-right: 0;
+    border-right: 0;
 }
 
 .mobile-only {
@@ -1208,7 +1209,7 @@ body {
 /* Responsive */
 @media only screen and (max-width: 680px) {
     .header .last {
-        margin-right: -5px;
+        margin-right: -18px;
     }
 
     .header .signup,
